k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: raft
  namespace: hogyoku
spec:
  serviceName: raft-svc
  replicas: 3
  selector:
    matchLabels:
      app: raft
  template:
    metadata:
      labels:
        app: raft
    spec:
      serviceAccountName: raft-sa
      automountServiceAccountToken: false
      
      containers:
        - name: raft
          image: hogyoku:dev
          imagePullPolicy: IfNotPresent
          workingDir: /data
          ports:
          - containerPort: 8000
            name: raft
          command:
            - /bin/sh
            - -c
          args:
            - |
              [...]
          readinessProbe:
            tcpSocket:
              port: raft
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          volumeMounts:
          - name: raft-data
            mountPath: /data
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - >-
                    /app/target/debug/client --ip 127.0.0.1 --port 8000
                    remove-node "$(( ${POD_NAME##*-} + 1 ))"

  volumeClaimTemplates:
    - metadata:
        name: raft-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
