k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: hogyoku
  labels:
    app: api-gateway

spec:
  type: ClusterIP

  selector:
    app: api-gateway

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
